force-app/main/default/objects/Scorecard_Metric__c/Scorecard_Metric__c.object-meta.xml
<CustomObject>
    <label>Scorecard Metric</label>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Scorecard Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Metric</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>