force-app/main/default/objects/Scorecard_Metric__c/fields/Layout_Type__c.field-meta.xml
<CustomField>
    <fullName>Layout_Type__c</fullName>
    <label>Layout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>