force-app/main/default/objects/Scorecard_Metric__c/fields/Question_Description__c.field-meta.xml
<CustomField>
    <fullName>Question_Description__c</fullName>
    <label>Question Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>