force-app/main/default/objects/Scorecard_Metric__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scorecard__c</columns>
    <columns>Answer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>